// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProposalForm /> should render a simple form without custom field 1`] = `
<form
  id="proposal-form"
>
  <div
    dangerouslySetInnerHTML={
      Object {
        "__html": "description",
      }
    }
  />
  <InjectIntl(ReactBootstrapInput)
    addonAfter={
      <Glyphicon
        bsClass="glyphicon"
        glyph="refresh"
      />
    }
    autoComplete="off"
    errors={null}
    groupClassName=""
    id="proposal_title"
    image={null}
    label={
      <FormattedMessage
        id="proposal.title"
        values={Object {}}
      />
    }
    labelClassName="h5"
    medias={Array []}
    onChange={[Function]}
    type="text"
    value="proposal title"
  />
  <Collapse
    dimension="height"
    getDimensionValue={[Function]}
    in={false}
    mountOnEnter={false}
    timeout={300}
    transitionAppear={false}
    unmountOnExit={false}
  >
    <Panel
      bsClass="panel"
      bsStyle="default"
      defaultExpanded={false}
      header={
        <FormattedMessage
          id="proposal.suggest_header"
          values={
            Object {
              "matches": 0,
              "terms": 2,
            }
          }
        />
      }
    >
      <ul
        style={
          Object {
            "listStyleType": "none",
            "padding": 0,
          }
        }
      />
      <Button
        active={false}
        block={false}
        bsClass="btn"
        bsStyle="default"
        disabled={false}
        onClick={[Function]}
      >
        <FormattedMessage
          id="global.close"
          values={Object {}}
        />
      </Button>
    </Panel>
  </Collapse>
  <InjectIntl(ReactBootstrapInput)
    errors={null}
    groupClassName=""
    id="proposal_theme"
    image={null}
    label={
      <span>
        <FormattedMessage
          id="proposal.theme"
          values={Object {}}
        />
      </span>
    }
    labelClassName="h5"
    medias={Array []}
    type="select"
    valueLink={
      Object {
        "requestChange": [Function],
        "value": -1,
      }
    }
  >
    <FormattedMessage
      id="proposal.select.theme"
      values={Object {}}
    />
    <option
      value={1}
    >
      theme1
    </option>
  </InjectIntl(ReactBootstrapInput)>
  <InjectIntl(ReactBootstrapInput)
    errors={null}
    groupClassName=""
    id="proposal_category"
    image={null}
    label={
      <span>
        <FormattedMessage
          id="proposal.category"
          values={Object {}}
        />
      </span>
    }
    labelClassName="h5"
    medias={Array []}
    type="select"
    valueLink={
      Object {
        "requestChange": [Function],
        "value": -1,
      }
    }
  >
    <FormattedMessage
      id="proposal.select.category"
      values={Object {}}
    />
    <option
      value={1}
    >
      category1
    </option>
  </InjectIntl(ReactBootstrapInput)>
  <InjectIntl(ReactBootstrapInput)
    errors={null}
    groupClassName=""
    id="proposal_district"
    image={null}
    label={
      <span>
        <FormattedMessage
          id="proposal.district"
          values={Object {}}
        />
      </span>
    }
    labelClassName="h5"
    medias={Array []}
    type="select"
    valueLink={
      Object {
        "requestChange": [Function],
        "value": null,
      }
    }
  >
    <FormattedMessage
      id="proposal.select.district"
      values={Object {}}
    />
    <option
      value={1}
    >
      disctrict1
    </option>
  </InjectIntl(ReactBootstrapInput)>
  <InjectIntl(ReactBootstrapInput)
    errors={null}
    groupClassName=""
    id="proposal_body"
    image={null}
    label={
      <FormattedMessage
        id="proposal.body"
        values={Object {}}
      />
    }
    labelClassName="h5"
    medias={Array []}
    type="editor"
    valueLink={
      Object {
        "requestChange": [Function],
        "value": undefined,
      }
    }
  />
  <InjectIntl(ReactBootstrapInput)
    errors={null}
    groupClassName=""
    id="proposal_media"
    image={null}
    label={
      <span>
        <FormattedMessage
          id="proposal.media"
          values={Object {}}
        />
        <span
          className="excerpt"
        >
          <FormattedMessage
            id="global.form.optional"
            values={Object {}}
          />
        </span>
      </span>
    }
    labelClassName="h5"
    medias={Array []}
    type="image"
    valueLink={
      Object {
        "requestChange": [Function],
        "value": null,
      }
    }
  />
</form>
`;

exports[`<ProposalForm /> should render a simple form without custom field and district 1`] = `
<form
  id="proposal-form"
>
  <div
    dangerouslySetInnerHTML={
      Object {
        "__html": "description",
      }
    }
  />
  <InjectIntl(ReactBootstrapInput)
    addonAfter={
      <Glyphicon
        bsClass="glyphicon"
        glyph="refresh"
      />
    }
    autoComplete="off"
    errors={null}
    groupClassName=""
    id="proposal_title"
    image={null}
    label={
      <FormattedMessage
        id="proposal.title"
        values={Object {}}
      />
    }
    labelClassName="h5"
    medias={Array []}
    onChange={[Function]}
    type="text"
    value="proposal title"
  />
  <Collapse
    dimension="height"
    getDimensionValue={[Function]}
    in={false}
    mountOnEnter={false}
    timeout={300}
    transitionAppear={false}
    unmountOnExit={false}
  >
    <Panel
      bsClass="panel"
      bsStyle="default"
      defaultExpanded={false}
      header={
        <FormattedMessage
          id="proposal.suggest_header"
          values={
            Object {
              "matches": 0,
              "terms": 2,
            }
          }
        />
      }
    >
      <ul
        style={
          Object {
            "listStyleType": "none",
            "padding": 0,
          }
        }
      />
      <Button
        active={false}
        block={false}
        bsClass="btn"
        bsStyle="default"
        disabled={false}
        onClick={[Function]}
      >
        <FormattedMessage
          id="global.close"
          values={Object {}}
        />
      </Button>
    </Panel>
  </Collapse>
  <InjectIntl(ReactBootstrapInput)
    errors={null}
    groupClassName=""
    id="proposal_theme"
    image={null}
    label={
      <span>
        <FormattedMessage
          id="proposal.theme"
          values={Object {}}
        />
      </span>
    }
    labelClassName="h5"
    medias={Array []}
    type="select"
    valueLink={
      Object {
        "requestChange": [Function],
        "value": -1,
      }
    }
  >
    <FormattedMessage
      id="proposal.select.theme"
      values={Object {}}
    />
    <option
      value={1}
    >
      theme1
    </option>
  </InjectIntl(ReactBootstrapInput)>
  <InjectIntl(ReactBootstrapInput)
    errors={null}
    groupClassName=""
    id="proposal_category"
    image={null}
    label={
      <span>
        <FormattedMessage
          id="proposal.category"
          values={Object {}}
        />
      </span>
    }
    labelClassName="h5"
    medias={Array []}
    type="select"
    valueLink={
      Object {
        "requestChange": [Function],
        "value": -1,
      }
    }
  >
    <FormattedMessage
      id="proposal.select.category"
      values={Object {}}
    />
    <option
      value={1}
    >
      category1
    </option>
  </InjectIntl(ReactBootstrapInput)>
  <InjectIntl(ReactBootstrapInput)
    errors={null}
    groupClassName=""
    id="proposal_body"
    image={null}
    label={
      <FormattedMessage
        id="proposal.body"
        values={Object {}}
      />
    }
    labelClassName="h5"
    medias={Array []}
    type="editor"
    valueLink={
      Object {
        "requestChange": [Function],
        "value": undefined,
      }
    }
  />
  <InjectIntl(ReactBootstrapInput)
    errors={null}
    groupClassName=""
    id="proposal_media"
    image={null}
    label={
      <span>
        <FormattedMessage
          id="proposal.media"
          values={Object {}}
        />
        <span
          className="excerpt"
        >
          <FormattedMessage
            id="global.form.optional"
            values={Object {}}
          />
        </span>
      </span>
    }
    labelClassName="h5"
    medias={Array []}
    type="image"
    valueLink={
      Object {
        "requestChange": [Function],
        "value": null,
      }
    }
  />
</form>
`;
